<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/data_title"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/shared_title"
            android:textSize="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_prefLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/shared_edit"
                android:layout_marginLeft="15dp"
                />
            <Button android:id="@+id/edit_pref_savebtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>

            <Button android:id="@+id/edit_pref_readbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/read"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/file_title"
            android:textSize="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_file_Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/shared_edit"
                android:layout_marginLeft="15dp"
                />
            <Button android:id="@+id/file_savebtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>

            <Button android:id="@+id/file_readbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/read"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/sql_title"
            android:textSize="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_sql_Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/shared_edit"
                android:layout_marginLeft="15dp"
                />
            <Button android:id="@+id/sql_savebtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>

            <Button android:id="@+id/sql_readbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/read"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>